remove images from 20

--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -58,13 +58,13 @@ Considering the question of consolidation, Mehra established the following crite
 
 The consolidants he chose were Plexisol and Bedacryl, which he then ultimately coupled with Plextol as a cold-lining adhesive. By using these consolidants, Mehra found he could achieve adequate consolidation results with less adhesive and could then use relatively lightweight fabrics when lining.
 
-The use of these aqueous materials, as well as the need to minimize lining defects such as weave interference and moating (that is, no alteration of the structural character of the painting), dictated the development of a suction table, and in 1975, Mehra published the design of a table to dry the painting under controllable low pressure. The function of the table is predicated upon high airflow capabilities, and thus required a significant plenum, which is covered by a perforated sheet of metal. The airflow is controlled by varying both the blower speed and by opening and closing the bleeder vents at one end of the table. The table thus has directional flow, the air being brought in one end of the table and out the other. On the surface of the perforated sheet is an open cell polyurethane sheet that can conform to the topography of the rear of the painting, although not too readily ([**fig. 20.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-1)).
+The use of these aqueous materials, as well as the need to minimize lining defects such as weave interference and moating (that is, no alteration of the structural character of the painting), dictated the development of a suction table, and in 1975, Mehra published the design of a table to dry the painting under controllable low pressure. The function of the table is predicated upon high airflow capabilities, and thus required a significant plenum, which is covered by a perforated sheet of metal. The airflow is controlled by varying both the blower speed and by opening and closing the bleeder vents at one end of the table. The table thus has directional flow, the air being brought in one end of the table and out the other. On the surface of the perforated sheet is an open cell polyurethane sheet that can conform to the topography of the rear of the painting, although not too readily.
 
 Ultimately, Mehra developed a three-stretcher system for use on the table when lining. The first stretcher, significantly larger than the painting, has the lining fabric attached to it. The reason for this oversize lining fabric is Mehra’s estimation that the center of a stretched fabric has fewer asymmetric strains than the edges, so the extra lining fabric minimizes introduction of new stress patterns on the painting after lining. The second stretcher has a screen stretched on it, with the sight size of the painting marked off. Through this screen, the adhesive is squeegeed onto the lining canvas, and then the screen is lifted, leaving on the lining fabric a measured dose of adhesive. The amount of adhesive can be varied by using different types of screens (fine to coarse). The painting, previously strip-lined onto the third stretcher, is carefully placed onto the adhesive, and the painting is then dried on the suction table. The presence of a membrane during drying would be optional. The strip-lining would later be removed if it had adhered on top of the tacking edge.
 
 It should be noted that at certain points in the development of this system Mehra was relying on the moisture in the adhesive to help relax the painting—as one coming from a background in glue-lining might well do. Over time, he moved more toward pretreating these distortions and toward using less and less adhesive for lining. Mehra was nothing if not relentlessly logical in the development of each step of his process; thus, it is not inconceivable that another motive for his ultimately incorporating Saran beads into the lining adhesive was as a means of lowering the adhesive strength to the level of a nap bond.
 
-The advent of technological advancements such as the Mehra table led others to develop yet other new procedures, and to also refine the lining adhesive strength problem. At the Courtauld Institute, Gerry Hedley, Alan Phenix, and Vicky Leanse investigated the use of solvent activation of a variety of synthetic adhesives ([**fig. 20.2**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-2)). Such approaches further refined the process, raising the possibility of further controlling lining adhesive strength via control of solvent dosage prior to lining ([[Phenix and Hedley 1984]]).
+The advent of technological advancements such as the Mehra table led others to develop yet other new procedures, and to also refine the lining adhesive strength problem. At the Courtauld Institute, Gerry Hedley, Alan Phenix, and Vicky Leanse investigated the use of solvent activation of a variety of synthetic adhesives. Such approaches further refined the process, raising the possibility of further controlling lining adhesive strength via control of solvent dosage prior to lining ([[Phenix and Hedley 1984]]).
 
 ## Hacke’s Design
 
@@ -72,13 +72,13 @@ As mentioned earlier, Mehra regarded his approach to the lining and structural t
 
 Hacke published his first paper on “untraditional” lining, as he called it, in 1964. By the 1978 ICOM meeting many of his table’s essential features were already in place ([[Hacke 1978]]). His system evolved to incorporate four principal features— heat, moisture, tension, and pressure—the manipulation of which Hacke once described as “like playing my piano.”[^3] By varying these factors during treatment, he was also able to arrive at the goal of tailoring the treatment procedure to the painting’s needs. Like Mehra, Hacke found that as he focused on pretreatment he could use less adhesive for lining. Note that, however, Hacke, although he preferred synthetics for their durability, did not wholly reject natural fabrics and adhesives as Mehra did. Similarly, the use of heat was not eschewed but rather incorporated to facilitate plasticization of the paint film. Ethylene glycol mixed with water was occasionally used for the same purpose.
 
-The structure of Hacke’s table is a plenum with an eggcrate structure inside, through which heating elements pass ([**fig. 20.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-3)). Air is removed from the plenum to create low pressure beneath the painting, and this air is moved via headers along the edge of the table. On top of the eggcrate structure is an aluminum sheet with fairly large holes. Atop this is placed a moist blanket for the humidifying part of the treatment, and then onto that is placed a fine-holed screen that will hold the loomed painting. Ultimately, the wet blanket is replaced by a humidifier that introduces humid air beneath the painting via the plenum during the pretreatment stage. As with the Mehra process, before lining—or even as a substitute for lining—pretreatment of distortion, cupping, and flaking is done, all facilitated by the suction table to humidify and/or pull consolidant into the paint film ([**fig. 20.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-4)).
+The structure of Hacke’s table is a plenum with an eggcrate structure inside, through which heating elements pass. Air is removed from the plenum to create low pressure beneath the painting, and this air is moved via headers along the edge of the table. On top of the eggcrate structure is an aluminum sheet with fairly large holes. Atop this is placed a moist blanket for the humidifying part of the treatment, and then onto that is placed a fine-holed screen that will hold the loomed painting. Ultimately, the wet blanket is replaced by a humidifier that introduces humid air beneath the painting via the plenum during the pretreatment stage. As with the Mehra process, before lining—or even as a substitute for lining—pretreatment of distortion, cupping, and flaking is done, all facilitated by the suction table to humidify and/or pull consolidant into the paint film.
 
 When overall consolidation was necessary, a consolidant like Plexisol was used. For lining, Plextol was used, principally for its low-temperature heat activation. The strength of the lining adhesive could be varied by the number of coats of adhesive applied: typically, one or two coats, which were allowed to dry overnight. In contrast to Mehra’s system, Hacke’s is not purely a cold-lining method.
 
 ## Willard’s Design
 
-Similar to Bent Hacke, Tony Reeve saw a need to standardize or mechanize the process of glue-lining, and from this the Willard table developed ([[Reeve 1984]]). This table is rather more explicitly a table designed to execute—and more importantly control—glue-linings. As glue-linings rely greatly on the skill of the liner and the liner's experience, many of the features of the Willard table integrate controls that rely on such knowledge to bring the table to full operation. The heating is not too different from the Hacke table, although the flow is considerably more complicated. The idea of humidifying from the rear is the same and is also mechanized, as Hacke’s table ultimately was. Hacke rather dryly noted that “it proves to be very complicated to work out a system which makes it possible to blow in moist air which can be accumulated in the structure of the painting.”[^4] The mechanization of humidification through the ducting of a suction table is indeed a technically difficult proposition, and therefore a lot of controls are built into the Willard table. The potential for damage by too much moisture is well known to glue liners and thus the system incorporates a dehumidifier as well. Early versions of the Willard table were tested quite rigorously at the National Gallery, London, and at Tate, with extensive modification of the initial design to accommodate a number of difficulties encountered, such as condensation in the ducting and on the surface of the table ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]) ([**fig. 20.5**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-5)).
+Similar to Bent Hacke, Tony Reeve saw a need to standardize or mechanize the process of glue-lining, and from this the Willard table developed ([[Reeve 1984]]). This table is rather more explicitly a table designed to execute—and more importantly control—glue-linings. As glue-linings rely greatly on the skill of the liner and the liner's experience, many of the features of the Willard table integrate controls that rely on such knowledge to bring the table to full operation. The heating is not too different from the Hacke table, although the flow is considerably more complicated. The idea of humidifying from the rear is the same and is also mechanized, as Hacke’s table ultimately was. Hacke rather dryly noted that “it proves to be very complicated to work out a system which makes it possible to blow in moist air which can be accumulated in the structure of the painting.”[^4] The mechanization of humidification through the ducting of a suction table is indeed a technically difficult proposition, and therefore a lot of controls are built into the Willard table. The potential for damage by too much moisture is well known to glue liners and thus the system incorporates a dehumidifier as well. Early versions of the Willard table were tested quite rigorously at the National Gallery, London, and at Tate, with extensive modification of the initial design to accommodate a number of difficulties encountered, such as condensation in the ducting and on the surface of the table ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]).
 
 One of the critical features of this design is the two independent flow patterns. One set of channels introduces the conditioned air to the backside of the painting or, theoretically, up into a closed chamber; the other flow system holds the painting flat on the table. As with the Hacke table, there are removable aluminum sheets. This table has since been produced commercially and is widely distributed.
 
@@ -98,7 +98,7 @@ Humidifying paintings to aid in the plasticization of the paint film, whether us
 
 All of this theoretical background was fundamental to the design of the final table I will discuss, one of which was built for New York’s Museum of Modern Art by Bill Maxwell. The table design was initiated by Al Albano and sought to also address the specific needs of MoMA, specifically that the table should be fungible: effective for both paper and paintings conservation. Indeed, as Caroline Villers notes in reviewing the state of affairs at the time of the Greenwich Lining Conference, “The practical problems posed by contemporary paintings were an important driver for change” ([[Villers 2003a]]). The nature of MoMA's collection—which includes many large works, composite works, and essentially raw canvas works—dictated that the table would be large, with a high airflow for the “textile” problems but sufficiently flexible to treat local distortions or flaking or to even do straight hot table linings for “traditional” paintings. To achieve all this, the experience and ideas of a number of people, including Stefan Michalski and Gerry Hedley, were consulted on the design.
 
-The base of the 8 x 12 ft (2.4 x 3.7m) working surface is basically an aluminum-top hot table with heaters attached underneath and double heaters at the sides to minimize any edge heating gradient. On top of this are 1-inch square aluminum channels, which run the length of the table and have holes drilled in the top at regular intervals. These channels are alternate intake and exhaust channels with an intake header at one end and exhaust at the other, where four 100 CFM fans run in parallel. On top of the channels is an aluminum heat exchanger, which is effective at distributing the airflow from the channels to the top surface (a perforated aluminum sheet) while also aiding in transfer of heat to the table surface ([**fig. 20.6**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-6)). Pressure and flow are controlled by leakage, a rheostat that varies the voltage to the pumps, an intake valve at the intake header end of the table. By opening an additional valve this intake air can also be passed through an auxiliary heater, and this provides an effective means of minimizing loss of the heat conducted up through the layers to the airflow layers.
+The base of the 8 x 12 ft (2.4 x 3.7m) working surface is basically an aluminum-top hot table with heaters attached underneath and double heaters at the sides to minimize any edge heating gradient. On top of this are 1-inch square aluminum channels, which run the length of the table and have holes drilled in the top at regular intervals. These channels are alternate intake and exhaust channels with an intake header at one end and exhaust at the other, where four 100 CFM fans run in parallel. On top of the channels is an aluminum heat exchanger, which is effective at distributing the airflow from the channels to the top surface (a perforated aluminum sheet) while also aiding in transfer of heat to the table surface. Pressure and flow are controlled by leakage, a rheostat that varies the voltage to the pumps, an intake valve at the intake header end of the table. By opening an additional valve this intake air can also be passed through an auxiliary heater, and this provides an effective means of minimizing loss of the heat conducted up through the layers to the airflow layers.
 
 The flow pattern is thus a sweeping of air up from underneath (if the intake valve is open) and the pulling of air down from above. It is this movement of air from underneath which allows for drying under a membrane; it also increases the efficiency of heat transfer from the heating plate. Pressure, of course, will depend on how much air is introduced via the intake valve, as well as the porosity of the support, whether it is canvas or paper, the density of the paint film, and other variables.
 
