Add images to 24

--- a/content/4-case-studies/24.md
+++ b/content/4-case-studies/24.md
@@ -28,7 +28,9 @@ abstract: "In preparation for an upcoming exhibition featuring preparatory works
 
 ## Introduction
 
-Painted between 1904 and 1911 by the American artist Edwin Austin Abbey (1852–1911), *Cartoon for the Passage of the Hours* (henceforth referred to as *The Hours*) is a 12 foot 6 inch diameter painting in the collection of the Yale University Art Gallery (YUAG) ([**fig. 24.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-1)). Created as a half-scale study for a 24-foot ceiling painting in the Pennsylvania State Capitol building, this work will feature prominently in an upcoming exhibition of Abbey’s preparatory studies for murals in American public buildings during the Gilded Age, a period referred to by artists of the time as the American Renaissance. Opening at YUAG in the fall of 2024 and traveling to the National Gallery, London, the following spring, this exhibition led conservators to devise unique solutions for the structural treatment, transport, and display of *The Hours*. These solutions included the fabrication of a custom aluminum working strainer, the use of Velcro hook and loop systems for stretching the painting to a temporary loom and its final strainer, the use of a silicone heating mat for attaching temporary looming strips, and the design of a segmented edge lining template using computer-aided design (CAD) and computerized numerical control (CNC) cutting technology.
+Painted between 1904 and 1911 by the American artist Edwin Austin Abbey (1852–1911), *Cartoon for the Passage of the Hours* (henceforth referred to as *The Hours*) is a 12 foot 6 inch diameter painting in the collection of the Yale University Art Gallery (YUAG) ([fig. 24.1](#fig-24-1)). Created as a half-scale study for a 24-foot ceiling painting in the Pennsylvania State Capitol building, this work will feature prominently in an upcoming exhibition of Abbey’s preparatory studies for murals in American public buildings during the Gilded Age, a period referred to by artists of the time as the American Renaissance. Opening at YUAG in the fall of 2024 and traveling to the National Gallery, London, the following spring, this exhibition led conservators to devise unique solutions for the structural treatment, transport, and display of *The Hours*. These solutions included the fabrication of a custom aluminum working strainer, the use of Velcro hook and loop systems for stretching the painting to a temporary loom and its final strainer, the use of a silicone heating mat for attaching temporary looming strips, and the design of a segmented edge lining template using computer-aided design (CAD) and computerized numerical control (CNC) cutting technology.
+
+{% figure 'fig-24-1' %}
 
 Although largely unknown today, Edwin Austin Abbey was one of the most prominent American painters working in British and American artistic circles at the turn of the twentieth century. Having begun his career as an illustrator in the publishing firm of Harper and Brothers in New York City, Abbey adopted oil painting in 1889, after moving permanently to England ([[Lucas 1921\|, 1:22–196]]). Over the next twenty years, he exhibited several acclaimed paintings of Shakespearean subjects at the Royal Academy, eventually becoming an academician in 1898 ([[Lucas 1921\|, 2:317]]). Like many painters of the time, Abbey also possessed a keen interest in mural painting and completed several commissions for British and American public buildings, his most famous being *The Quest and Achievement of the Holy Grail*, held in the Boston Public Library.
 
@@ -40,7 +42,9 @@ An essential component of Abbey’s artistic process was the creation of hundred
 
 Early inventories of the Abbey Collection indicate that *The Hours* remained stretched from the beginning of its creation in Abbey’s London studio until his possessions were packed for shipment to New Haven in 1937, when the work was rolled for transport across the Atlantic and subsequently placed into storage for eighty years. *The Hours* has never been exhibited or treated since its arrival, although it was surveyed and sympathetically rehoused twenty years ago by paintings conservator Anne O’Connor during a rehousing project funded by the Institute of Museum and Library Services.
 
-The canvas remains supple and strong, but it displayed severe undulations from decades of tightly rolled storage, creating a corrugated pattern of planar deformations most visible in raking light ([**fig. 24.2**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-2)). Several strong creases from past folding of the canvas extended the width of the painting and were made more visible by associated ground and paint loss. The tacking and fold-over edges display the most abrasion and loss to the canvas, ground, and paint layers, much of it corresponding to the particular fold patterns of a circular painting. Some of the abrasion and losses along the tacking edges may also have been caused by Abbey rolling the painting back and forth as he worked.
+The canvas remains supple and strong, but it displayed severe undulations from decades of tightly rolled storage, creating a corrugated pattern of planar deformations most visible in raking light ([fig. 24.2](#fig-24-2)). Several strong creases from past folding of the canvas extended the width of the painting and were made more visible by associated ground and paint loss. The tacking and fold-over edges display the most abrasion and loss to the canvas, ground, and paint layers, much of it corresponding to the particular fold patterns of a circular painting. Some of the abrasion and losses along the tacking edges may also have been caused by Abbey rolling the painting back and forth as he worked.
+
+{% figure 'fig-24-2' %}
 
 The paint and ground layers are inherently stable, with flaking occurring primarily along canvas creases in the painted surface and fold-over edges. The painting retains its unvarnished, matte surface. Minor burnishing of the surface is visible as small, glossy high points scattered throughout, where the paint film likely rubbed against the roll interleaf. The burnishing is most noticeable in the night half of the painting, where a thin layer of hazy white efflorescence is also present on the robes of the figures.[^3]
 
@@ -64,17 +68,23 @@ The intermediate looming step presented a valuable opportunity for conservators 
 
 Fifty-six looming strips, each 4 1/16 inches wide, were fabricated to be placed 4 inches apart around the circumference of the painting. The strips were cut from polyester sailcloth. At one end, where the strip was to be attached to the painting, two layers of Beva 371 film were adhered and the edge pinked. Four-inch-wide “loop side” Velcro (Loop 1000) was sewn to the opposite end of the strips to attach the painting to the strainer. Nylon Velcro was selected over polyester Velcro because of its demonstrated use in conservation and longer cycle life.[^8]
 
-The looming strips were attached while the painting was faceup. Strip placement was guided by the use of a cardboard template, to ensure the attached strips established a radial line of tension from the center of the painting outwards ([**fig. 24.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-3)). To minimize flexing of the canvas support and to avoid applying heat to the easily burnished paint film, a flexible silicone heating mat was assembled using a commercially available product and basic wiring. Wired to a standard plug and connected to a rheostat for regulating the temperature, the mat could be slipped underneath the painting and looming strip to activate the Beva adhesive. The temperature of the mat and the surface of the painting were monitored with an infrared noncontact thermometer, and the rheostat could be adjusted accordingly. During Beva activation from the back of the painting, a metal plate cushioned with Volara and wrapped with Marvelseal was used to apply gentle pressure from the front and reflect heat back toward the painting. After the Beva was activated, the strips were cooled under a cushioned metal plate and weights.
+The looming strips were attached while the painting was faceup. Strip placement was guided by the use of a cardboard template, to ensure the attached strips established a radial line of tension from the center of the painting outwards ([fig. 24.3](#fig-24-3)). To minimize flexing of the canvas support and to avoid applying heat to the easily burnished paint film, a flexible silicone heating mat was assembled using a commercially available product and basic wiring. Wired to a standard plug and connected to a rheostat for regulating the temperature, the mat could be slipped underneath the painting and looming strip to activate the Beva adhesive. The temperature of the mat and the surface of the painting were monitored with an infrared noncontact thermometer, and the rheostat could be adjusted accordingly. During Beva activation from the back of the painting, a metal plate cushioned with Volara and wrapped with Marvelseal was used to apply gentle pressure from the front and reflect heat back toward the painting. After the Beva was activated, the strips were cooled under a cushioned metal plate and weights.
+
+{% figure 'fig-24-3' %}
 
 The looming strips were attached 2 inches in from the tacking edge, over the tacking edge, and 2 inches past the tacking edge. The strips were not attached to the full length of the wide fold-over edges, as this was deemed unnecessary and some areas of canvas shrinkage prevented it. Rare earth magnets, cushioned with blotter and wrapped in Tyvek for easier removal, were used to prevent flexing of the unattached tacking margins when the painting was placed upright.
 
-The aluminum strainer was prepared by attaching the hook side of the Velcro (Hook 88) to both the side edges and verso with West Systems marine epoxy, providing two points of contact for the looming strips. Temporary cardboard supports were fabricated to level the front of the strainer so that the painting would not slump during stretching. These pizza slice–shape cardboard inserts were removable from the back. The painting was gently slid onto the strainer and stretched face up with the Velcro looming strips—a process that, remarkably, took only a matter of minutes. This attachment system allows for minor adjustments to tension around the circle. Once stretched, the 14-foot loomed painting was placed upright on a large in-house fabricated easel, repurposed from another project (see [**fig. 24.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-1)).
+The aluminum strainer was prepared by attaching the hook side of the Velcro (Hook 88) to both the side edges and verso with West Systems marine epoxy, providing two points of contact for the looming strips. Temporary cardboard supports were fabricated to level the front of the strainer so that the painting would not slump during stretching. These pizza slice–shape cardboard inserts were removable from the back. The painting was gently slid onto the strainer and stretched face up with the Velcro looming strips—a process that, remarkably, took only a matter of minutes. This attachment system allows for minor adjustments to tension around the circle. Once stretched, the 14-foot loomed painting was placed upright on a large in-house fabricated easel, repurposed from another project (see [fig. 24.1](#fig-24-1)).
 
 ### Humidification
 
 Following looming, planar deformations and creases were resolved through humidification and drying under pressure. This step was completed with the painting upright, enabling access to the front and back of the work and allowing conservators to monitor the painting’s surface. Upright humidification also allowed the painting to be periodically retensioned with the looming strips as the canvas deformations relaxed.
 
-Three clear vertical panels composed of polycarbonate sheet stabilized with wooden frames were fabricated to provide a surface for the front of the painting during upright humidification ([**fig. 24.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-4)). These panels were easily adjusted and movable using photographic light stands and adapted easels. The panels were covered in silicone-release Mylar and positioned against the face of the painting to provide a stable working surface during treatment. Damp blotters were positioned on the verso of the canvas and layered with Mylar and a metal plate. As one conservator held the blotter and metal plate in place, a colleague applied rare earth magnets to the panel on the front. The strength and number of magnets could be adjusted to apply variable amounts of pressure to the canvas and blotter.[^9] The clear panels allowed conservators to monitor the front of the painting ([**fig. 24.5**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-5)).
+Three clear vertical panels composed of polycarbonate sheet stabilized with wooden frames were fabricated to provide a surface for the front of the painting during upright humidification ([fig. 24.4](#fig-24-4)). These panels were easily adjusted and movable using photographic light stands and adapted easels. The panels were covered in silicone-release Mylar and positioned against the face of the painting to provide a stable working surface during treatment. Damp blotters were positioned on the verso of the canvas and layered with Mylar and a metal plate. As one conservator held the blotter and metal plate in place, a colleague applied rare earth magnets to the panel on the front. The strength and number of magnets could be adjusted to apply variable amounts of pressure to the canvas and blotter.[^9] The clear panels allowed conservators to monitor the front of the painting ([fig. 24.5](#fig-24-5)).
+
+{% figure 'fig-24-4' %}
+
+{% figure 'fig-24-5' %}
 
 The canvas responded well to this system of controlled humidification. Conservators found that ten-minute exposures to a damp blotter, followed by controlled drying under dry blotters—forty-minute cycles of dry blotters switched three times—resolved many planar deformations. In areas where canvas creases and folds caused tented paint, a suction platen was used concurrently to coax the deformed paint layers into plane.
 
@@ -88,7 +98,9 @@ The decision to use the original strainer requires that the painting travel on a
 
 Edge lining was pursued to provide additional support to the tacking edges during stretching and unstretching and to serve as a means by which the painting could be attached with Velcro to the strainer. Mock-ups indicated that the circular shape of the painting, its wide fold-over edges, and the extra bulk from the Velcro would present several challenges during stretching. Conservators aimed to design an edge-lining system that would not add significant bulk to the edges of the painting, as it might become a hinderance during rolling.
 
-To minimize excess material, the edge-lining was designed to take the form of segments, or strips, rather than one continuous piece of canvas. Edge-lining strips were designed to fit around the circumference of the circle and have tabs that fold over the back of the strainer. Twenty-four strips were constructed from Trevira CS fabric, Beva 371 film, and 6-inch-wide loop-side Velcro (Loop 1100) ([**fig. 24.6**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-6)). The strips were designed to attach to the entire diameter of the tacking edge and 3 inches behind the face of the painting, providing continuous support around the edge of the work. To avoid creating excess bulk at the fold-over edges, the strips were designed with three tapered Velcro tabs calculated to fit together with no overlap when folded around and attached to the back of the strainer.
+To minimize excess material, the edge-lining was designed to take the form of segments, or strips, rather than one continuous piece of canvas. Edge-lining strips were designed to fit around the circumference of the circle and have tabs that fold over the back of the strainer. Twenty-four strips were constructed from Trevira CS fabric, Beva 371 film, and 6-inch-wide loop-side Velcro (Loop 1100) ([fig. 24.6](#fig-24-6)). The strips were designed to attach to the entire diameter of the tacking edge and 3 inches behind the face of the painting, providing continuous support around the edge of the work. To avoid creating excess bulk at the fold-over edges, the strips were designed with three tapered Velcro tabs calculated to fit together with no overlap when folded around and attached to the back of the strainer.
+
+{% figure 'fig-24-6' %}
 
 Using the ideal geometric measurements of the painting, a CAD design for the edge lining was developed and, with the help of a CNC unit, a template was cut from acrylic sheet.[^13] The template was traced onto the fabric, ensuring that the Trevira warp direction was always oriented radially from the center of the painting to the center of the middle tab. Two layers of Beva 371 film were applied to one side of the edge lining strips and the interior edge was pinked. Three strips of 6-inch-wide loop-side Velcro were sewn with heavy duty polyester thread to the tabs on the opposite end of the edge-lining strip. To assist with the sewing process, the Velcro was first tacked in place with one layer of Beva 371 film.
 
@@ -98,7 +110,9 @@ The 6-inch-wide hook-side Velcro (Hook 89) was attached to the back of the strai
 
 ### Stretching
 
-In a carefully planned series of steps to prepare for stretching, the edge-lined painting was unloomed and the aluminum strainer removed ([**fig. 24.7**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/24-Schwarz/Schwarz/fig-24-7)) The two halves of the original wooden strainer were then placed on the verso of the painting to ensure a close fit. After it was ensured the painting would fit onto its strainer, the two halves of the strainer were loose-lined with Trevira CS fabric, and the painting was successfully stretched onto its strainer using the Velcro edge-lining.
+In a carefully planned series of steps to prepare for stretching, the edge-lined painting was unloomed and the aluminum strainer removed ([fig. 24.7](#fig-24-7)) The two halves of the original wooden strainer were then placed on the verso of the painting to ensure a close fit. After it was ensured the painting would fit onto its strainer, the two halves of the strainer were loose-lined with Trevira CS fabric, and the painting was successfully stretched onto its strainer using the Velcro edge-lining.
+
+{% figure 'fig-24-7' %}
 
 ## Continuing Work and Conclusion
 
@@ -115,57 +129,44 @@ The authors would like to thank Olav Bjornerud, Dr. Lukasz Bratasz, Jason DeBloc
 ### Beva 371 Film, Pellon, blotter
 
 TALAS
-
-[[https://www.talasonline.com]{.underline}](https://www.talasonline.com)
+[https://www.talasonline.com](https://www.talasonline.com)
 
 ### Velcro
 
 Looming Velcro: 4 in. Loop 1000 and 1 in. Hook 88
-
 HookandLoop.com
-
-[[https://www.hookandloop.com]{.underline}](https://www.hookandloop.com)
+[https://www.hookandloop.com](https://www.hookandloop.com)
 
 Edge Lining Velcro : 6 in. Loop 1100 and 6 in. Hook 89
-
 Industrial Webbing Co.
-
-[[https://www.industrialwebbing.com/]{.underline}](https://www.industrialwebbing.com/)
+[https://www.industrialwebbing.com/](https://www.industrialwebbing.com/)
 
 ### Rare earth magnets
 
 For tacking edges: #NSN0683
-
 For humidification: #NSN0582, #NSN0635, #NSN0642, #CUP0303
-
 MAGCRAFT
-
-[[https://www.magcraft.com/]{.underline}](https://www.magcraft.com/)
+[https://www.magcraft.com/](https://www.magcraft.com/)
 
 ### Trevira woven polyester fabric
 
 Theatex
-
-[[https://www.theatex.nl/nl/home]{.underline}](https://www.theatex.nl/nl/home)
+[https://www.theatex.nl/nl/home](https://www.theatex.nl/nl/home)
 
 ### West Systems epoxy
 
 Epoxy resin \# 104 and Epoxy Hardener #206 and #209
-
 West Marine
-
-<https://www.westmarine.com/>
+[https://www.westmarine.com/](https://www.westmarine.com/)
 
 ## Dibond 3 mm aluminum composite panel
 
 3A Composites
-
-[[https://3acompositesusa.com/products/dibond/]{.underline}](https://3acompositesusa.com/products/dibond/)
+[https://3acompositesusa.com/products/dibond/](https://3acompositesusa.com/products/dibond/)
 
 ### Silicone heating mat
 
 Omega Engineering Inc.
-
 No longer available from manufacturer; purchased on eBay
 
 {% backmatter %}
